titan/tests/ui/raw_pointer_not_allowed.stderr
error: Field type `* const u32` contains a raw pointer (`*const` or `*mut`).
       Pointers are process-specific and cannot be shared across processes.
       help: use inline data or atomics instead
 --> tests/ui/raw_pointer_not_allowed.rs:6:10
  |
6 |     ptr: *const u32,
  |          ^
