titan/tests/ui/raw_pointer_not_allowed.rs
use titan::SharedMemorySafe;

#[derive(SharedMemorySafe)]
#[repr(C)]
struct HasRawPointer {
    ptr: *const u32,
}

fn main() {}
